--- a/views/home.pug
+++ b/views/home.pug
@@ -99,5 +99,4 @@ block content
           //- End of main-raised
   //- Modals
   section.modals
-    include includes/modals/heroku
-    include includes/modals/coupons
+    include includes/modals/hosting-modals
