--- a/views/includes/home/files-storage-table.pug
+++ b/views/includes/home/files-storage-table.pug
@@ -15,6 +15,8 @@ mixin amazon-signup
           | First GB per month is free
         li Free transfer to EC2 (in the same region)
         li
-          a(rel="nofollow" target="_blank", href="https://aws.amazon.com/s3/pricing/") Check detailed prices
+          a(rel="nofollow" target="_blank", href="https://aws.amazon.com/s3/pricing/")
+            | Check detailed prices&nbsp;
+            i.material-icons.material-icons--inline-card open_in_new
         li.no-border
           +amazon-signup
