--- a/views/home.pug
+++ b/views/home.pug
@@ -81,8 +81,9 @@ block content
               .row
                 .col-sm-12
                   h2.category__header CDN
-                  p When using a Content Delivery Network, your website is copied around the world. Each time someone wants to visit it, the CDN will select the closest location and deliver files from there.<br>
-                    | It will make your website load faster (#[a(href="/faq#cdn") there are even more benefits!]) and fast website means happy users.
+                  p When using a Content Delivery Network, all files for your website are distributed in many Points of presence (PoP) around the world. Each time someone visits your website, the CDN will deliver the files from the closest location, which will make the website load significantly faster.<br>
+                    | See how much would you pay based on estimated transfer per month (or based on "Other" criteria).<br>
+                    | #[a(href="/faq#cdn") Read about ] other benefits of using a CDN.
               include includes/home/cdn-table
           section.background-inverse
             .container
