--- a/views/includes/home/cdn-table.pug
+++ b/views/includes/home/cdn-table.pug
@@ -97,10 +97,11 @@ mixin cloudflare-signup
     .card.price
       ul
         li.price__header CDN77
+        li Pay as you go
         li Transfer: #[strong 0.049 - 0.185 $/GB]
-        li Transfer discounts start from 30TB
         li Free storage (up to 50GB)
         li Points of presence: 32
+        li Transfer discounts start from 30TB
         li Minimum recharge: #[strong 99$] per year
         li.no-border
           +cdn77-signup
@@ -108,6 +109,7 @@ mixin cloudflare-signup
     .card.price
       ul
         li.price__header CloudFront
+        li Pay as you go
         li Transfer: #[strong 0.085 - 0.25 $/GB]
         li Free storage
         li
@@ -120,6 +122,7 @@ mixin cloudflare-signup
         li 10,000 HTTPS requests:<br>
           | #[strong 0.01 - 0.022 $]
         li Points of presence: 37
+        li Transfer discounts start from 40TB
         li Discounts when paying upfront
         li.no-border
           +amazon-signup
@@ -127,14 +130,14 @@ mixin cloudflare-signup
     .card.price
       ul
         li.price__header MaxCDN
-        li Different plans with packages of data
-        li 9$ for 100GB per month<br>
+        li Monthly fee
+        li 100GB/month: #[strong 9$]<br>
           | 0.08 per GB overage<br>
           | 2 Points of Presence
-        li 39$ for 500GB per month<br>
+        li 500GB/month: #[strong 39$]<br>
           | 0.07 per GB overage<br>
           | 3 Points of Presence
-        li 79$ for 1TB per month<br>
+        li 1TB/month: #[strong 79$]<br>
           | 0.06 per GB overage<br>
           | 5 Points of Presence
         li 15$ per month to use PoP outside of US and Europe
@@ -145,6 +148,7 @@ mixin cloudflare-signup
     .card.price
       ul
         li.price__header CloudFlare
+        li Monthly fee
         li Free package: 3 page rules
         li 20$/month: 20 page rules
         li 200$/month: 50 page rules
