--- a/views/includes/home/monitoring-table.pug
+++ b/views/includes/home/monitoring-table.pug
@@ -3,6 +3,7 @@ mixin uptimerobot-signup
 mixin statuscake-signup
   a.btn.btn-primary.u-bold(rel="nofollow" target="_blank", href="https://www.statuscake.com/") Open StatusCake
 
+//- TODO: remove price-hosting classes if that won't break the styling
 #domain-price.row.u-mt-medium.u-mb-medium
   .col-xs-12.col-sm-4.col-sm-offset-2
     .card.price.price-hosting
