--- a/views/home.pug
+++ b/views/home.pug
@@ -89,8 +89,26 @@ block content
             .container
               .row
                 .col-sm-12
+                  h2.category__header Version Control
+                  p Online code repositories allow you to share your code with other people and synchronize it between different computers.<br>
+                    | Most of them will let you create unlimited public repositories and some of them will also give you free private repositories.<br>
+                    | Check the most popular options below.
+              include includes/home/vc-table
+          section
+            .container
+              .row
+                .col-sm-12
+                  h2.category__header Sending emails
+                  p Often you need a way to communicate with users of your website.<br>
+                    | You either want to send emails automatically when user performs a specific action (using transactional emails) or send a bunch of emails as a newsletter (using email marketing tools).<br>
+                    | Writing good emails is hard, but sending them for free (at least for a small audience) is not, thanks to the following services.
+              include includes/home/emails-table
+          section.background-inverse
+            .container
+              .row
+                .col-sm-12
                   h2.category__header Foo
-                  p Foo bar baz foor bar baz
+                  p Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
           section#ssl.ssl.category
             .container
               .row.u-mb-medium
