--- a/views/includes/home/emails-table.pug
+++ b/views/includes/home/emails-table.pug
@@ -31,7 +31,7 @@ mixin amazon-signup
                 li 12,000 emails per month
                 li 2,000 subscribers
                 li Transactional emails through mandrill<br>
-                  | (no free plan)
+                  | (requires paid plan)
                 li A/B testing
                 li.no-border
                   +mailchimp-signup
